Web Inspector: console.assert should do far less work when the assertion is true https://bugs.webkit.org/show_bug.cgi?id=157297 <rdar://problem/26056556>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2016-05-03
Reviewed by Timothy Hatcher.

* runtime/ConsoleClient.h:
* runtime/ConsoleClient.cpp:
(JSC::ConsoleClient::assertion):
(JSC::ConsoleClient::assertCondition): Deleted.
Rename, now that this will only get called when the assertion failed.

* runtime/ConsoleObject.cpp:
(JSC::consoleProtoFuncAssert):
Avoid doing any work if the assertion succeeded.

Canonical link: https://commits.webkit.org/175405@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200371 268f45cc-cd09-0410-ab3c-d52691b4dbfc